--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,8 @@ steps:
   displayName: Build
   inputs:
     command: build
-    solution: 'testWebApi/AztestWebApi/*.csproj'
+    #project: 'testWebApi/AztestWebApi/AztestWebApi.csproj'
+    solution: '$(solution)'
     arguments: '/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip"'
 
 - task: DotNetCoreCLI@2   
