--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,12 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-#- task: VSBuild@1
-#  inputs:
-#    solution: '$(solution)'
-#    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true #/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip" /p:DeployIisAppPath="Default Web Site"'
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
+- task: DotNetCoreCLI@3
+  inputs:
+    solution: '$(solution)'
+    msbuildArgs: '/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
 
 #
 #- task: VSTest@2
@@ -35,13 +35,13 @@ steps:
 #    configuration: '$(buildConfiguration)'
 #
 
-- task: DotNetCoreCLI@2   
-  displayName: Build
-  inputs:
-    command: build
-    project: 'testWebApi/AztestWebApi/AztestWebApi.csproj'
+#- task: DotNetCoreCLI@2   
+#  displayName: Build
+#  inputs:
+ #   command: build
+ #   project: 'testWebApi/AztestWebApi/AztestWebApi.csproj'
     #solution: '$(solution)'
-    arguments: '/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip"'
+ #   arguments: '/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip"'
 
 - task: DotNetCoreCLI@2   
   displayName: Publish
