--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,43 +15,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
-#- task: DotNetCoreCLI@3
-#  inputs:
-#    solution: '$(solution)'
-#    msbuildArgs: '/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip"'
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
-
-#
-#- task: VSTest@2
-# inputs:
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
-#
-
-- task: DotNetCoreCLI@2   
-  displayName: Build
-  inputs:
-    command: build
-    solution: '**/*.sln'
-    arguments: '/p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\testWebApi.zip"'
-
-- task: DotNetCoreCLI@2   
-  displayName: Publish
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
-
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'azure-webapi-serviceconnection'
-    appName: 'testWebApi'
-    package: $(System.ArtifactsDirectory)/**/*.z
+  -script: dotnet build --configuration $(buildConfiguration)
+  displayName:'dotnet build $(buildConfiguration)
