--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,4 @@ variables:
 
 steps:
   -script: dotnet build --configuration $(buildConfiguration)
-  displayName:'dotnet build $(buildConfiguration)
+  displayName:'dotnet build $(buildConfiguration)'
