--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-  - script: dotnet build --source ./AztestWebApi.sln --configuration $(buildConfiguration)
+  - script: dotnet build --source ././AztestWebApi.sln --configuration $(buildConfiguration)
     displayName: 'dotnet build $(buildConfiguration)'
