--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,20 @@ steps:
     command: 'build'
     projects: '**/*.csproj'
     configuration: $(buildConfiguration)
-    
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
+
+# this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    artifactName: 'AzTestWebApi'
+
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'azure-webapi-serviceconnection'
