Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ steps:
   inputs:
     azureSubscription: 'azure-webapi-serviceconnection'
     appName: 'AzTestWebApi'
-    package: $(System.ArtifactsDirectory)/**/*.zip    
+    package: $(Build.ArtifactStagingDirectory)/**/*.zip    
 #steps:
 #  - script: dotnet build --source ././*.sln --configuration $(buildConfiguration)
 #    displayName: 'dotnet build $(buildConfiguration)'
