Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,15 +37,15 @@ steps:
 
 # this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
 - task: PublishBuildArtifacts@1
-  inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'AzTestWebApi'
+#  inputs:
+#    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+#    artifactName: 'AzTestWebApi'
 
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'azure-webapi-serviceconnection'
-    appName: 'AzTestWebApi'
-    package: $(Build.ArtifactStagingDirectory)/AzTestWebApi.zip    
+#- task: AzureWebApp@1
+#  inputs:
+#    azureSubscription: 'azure-webapi-serviceconnection'
+#    appName: 'AzTestWebApi'
+#    package: $(Build.ArtifactStagingDirectory)/AzTestWebApi.zip    
 #steps:
 #  - script: dotnet build --source ././*.sln --configuration $(buildConfiguration)
 #    displayName: 'dotnet build $(buildConfiguration)'
