--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,12 @@ steps:
     projects: '**/*.csproj'
     configuration: $(buildConfiguration)
 
+-task: DotNetCoreCLI@2
+ inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: publish
