--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,24 +17,28 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
 - task: NuGetCommand@2
+  displayName: 'Restore Nuget'
   inputs:
     command: 'restore'
     restoreSolution: '**/*.sln'
     feedsToUse: 'select'
     
 - task: DotNetCoreCLI@2
+  displayName: 'Build'
   inputs:
     command: 'build'
     projects: '**/*.csproj'
     configuration: $(buildConfiguration)
 
 - task: DotNetCoreCLI@2
+  displayName: 'Test'
   inputs:
     command: test
     projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
+  displayName: 'publish'
   inputs:
     command: publish
     publishWebProjects: True
